clusters/base/apps/media-server/sabnzbd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media-server
  labels:
    app.kubernetes.io/name: sabnzbd
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: "Unsupported for this app."
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
    spec:
      # serviceAccountName: default
      # automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsUser: 106789
        runAsGroup: 109030
        fsGroup: 109030
        seLinuxOptions:
          level: "s0:c123,c456"
      containers:
        - name: sabnzbd
          image: ghcr.io/home-operations/sabnzbd:4.5.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: sabnzbd-http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: sabnzbd-data
              mountPath: /config
            - name: media
              mountPath: /media
          resources:
            limits:
              cpu: 2000m
              memory: 1000Mi
            requests:
              cpu: 500m
              memory: 1000Mi
          livenessProbe:
            exec:
              command:
                - /usr/bin/env
                - bash
                - -c
                - curl --fail "localhost:8080/api?mode=status&apikey=$SABNZBD__API_KEY"
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          securityContext:
            runAsNonRoot: true
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
      volumes:
        - name: sabnzbd-data
          persistentVolumeClaim:
            claimName: sabnzbd-data
        - name: media
          persistentVolumeClaim:
            claimName: media
