clusters/base/apps/media-server/sabnzbd/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: media-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sabnzbd
  ports:
    - name: sabnzbd-http
      port: 8080
      protocol: TCP
      targetPort: sabnzbd-http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media-server
  labels:
    app.kubernetes.io/name: sabnzbd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &fqdn sabnzbd.${DOMAIN}
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - *fqdn
      secretName: sabnzbd-cert
  rules:
    - host: *fqdn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  name: sabnzbd-http
